--- a/lntsandbox/pom.xml
+++ b/lntsandbox/pom.xml
@@ -31,6 +31,7 @@
         <module>ui.apps</module>
         <module>ui.apps.structure</module>
         <module>ui.content</module>
+        <module>ui.config</module>
         <module>it.tests</module>
         <module>ui.tests</module>
         <module>analyse</module>
