--- a/lti-coe/core/pom.xml
+++ b/lti-coe/core/pom.xml
@@ -90,7 +90,10 @@ Import-Package: javax.annotation;version=0.0.0,*
             <groupId>com.adobe.aem</groupId>
             <artifactId>aem-sdk-api</artifactId>
         </dependency>
-
+		<dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency> 
 
         <!-- Testing -->
         <dependency>
