--- a/lti-coe/pom.xml
+++ b/lti-coe/pom.xml
@@ -27,7 +27,6 @@
     <modules>
         <module>all</module>
         <module>core</module>
-        <module>ui.frontend</module>
         <module>ui.apps</module>
         <module>ui.apps.structure</module>
         <module>ui.content</module>
@@ -246,7 +245,7 @@ Bundle-DocURL:
                     <artifactId>htl-maven-plugin</artifactId>
                     <version>1.3.4-1.4.0</version>
                     <configuration>
-                        <failOnWarnings>true</failOnWarnings>
+                        <failOnWarnings>false</failOnWarnings>
                     </configuration>
                 </plugin>
                 <!-- Jackrabbit FileVault Package Plugin -->
