Custom layout container

--- a/lti-coe/core/pom.xml
+++ b/lti-coe/core/pom.xml
@@ -138,5 +138,9 @@ Import-Package: javax.annotation;version=0.0.0,*
             <version>1.4.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			    <groupId>org.jetbrains</groupId>
+			    <artifactId>annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
