--- a/lti-coe/pom.xml
+++ b/lti-coe/pom.xml
@@ -605,6 +605,11 @@ Bundle-DocURL:
                 <version>1.0.1</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+			    <groupId>org.jetbrains</groupId>
+			    <artifactId>annotations</artifactId>
+			    <version>19.0.0</version>
+			</dependency>            
         </dependencies>
     </dependencyManagement>
 
